--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    maxParallelForks = Runtime.runtime.availableProcessors() // Используй количество доступных процессоров
-    forkEvery = 100 // Количество тестов на каждый fork
+    maxParallelForks = Runtime.runtime.availableProcessors()
+    forkEvery = 100
     testLogging {
         events "started", "passed", "skipped", "failed"
         showStandardStreams = true
